# data-engineer-career-track

./: .gitignore  README.md  pyproject.toml
introduction-to-airflow-in-python/: 1.ipynb
introduction-to-dbt/: note.md
introduction-to-dbt/nyc_yellow_taxi/: .user.yml  datacheck  dbt_project.yml
introduction-to-dbt/nyc_yellow_taxi/models/: model_properties.yml
introduction-to-dbt/nyc_yellow_taxi/models/taxi_rides/: avg_ride_cost_per_day.sql  model_properties.yml  taxi_rides_raw.sql  taxi_rides_raw_source.sql  total_creditcard_riders_by_day.sql
introduction-to-dbt/nyc_yellow_taxi/seeds/: nynj_zipcodes.csv  properties.yml
introduction-to-dbt/nyc_yellow_taxi/snapshots/: vehicle_list_snapshot.sql
introduction-to-dbt/nyc_yellow_taxi/tests/: assert_trip_duration_gt_0.sql
introduction-to-dbt/nyc_yellow_taxi/tests/generic/: check_gt_0.sql  columns_equal.sql
introduction-to-scala/: README.md
introduction-to-scala/scala-demo/: build.sbt
introduction-to-scala/scala-demo/.scala-build/scala-demo_f4dd477a3a/classes/main/: Main$package.tasty  foo.tasty  hello.tasty
introduction-to-scala/scala-demo/src/main/scala/: foo.scala
introduction-to-scala/scala-demo/src/test/scala/: MySuite.scala
introduction-to-scala/scala-demo/worksheets/: 01-demo.worksheet.sc  02-note.worksheet.sc  03-note.worksheet.sc  04-note.worksheet.sc
introduction-to-scala/scala-demo/worksheets/output/: 01-demo.worksheet.sc  02-note.worksheet.sc  03-note.worksheet.sc  04-note.worksheet.sc
(+20 files in other folders)
